# mail_agent

./: .env.example  .gitignore  AI_CHAT_USAGE.md  API.md  README.md  TEST.md  agent.py  config.py  deepseek.py  env.yml  fix_mailer.py  mailer.py  nlu.py  pyproject.toml  quick_test.py  requirements.txt  server.py  tasks.py  test_email_connection.py  test_multi_recipient.py
frontend/: .env.example  README.md  package-lock.json
frontend/src/: App.css  App.tsx  index.css  login.css  login.tsx
frontend/src/components/: AssistantPanel.tsx  ComposeModal.tsx  EmailDetail.css  EmailDetail.tsx  EmailList.tsx  SearchModal.css  SearchModal.tsx  SettingsPanel.css  SettingsPanel.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
