[project]
name = "mailagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "email-validator>=2.3.0",
    "imaplib2>=3.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",
]
